# delivery_partner

./: README.md  pyproject.toml
delivery_partner/: api.py  hooks.py  modules.txt
delivery_partner/doctype/aggregator_item_mapping/: aggregator_item_mapping.json
delivery_partner/doctype/aggregator_order_log/: aggregator_order_log.json
delivery_partner/doctype/aggregator_settings/: aggregator_settings.json
